Fix problems with concurrency for very fast file streams